# rust_program_synthesis

./: .gitignore  Cargo.toml  README.md  useful_cmds.sh
hardware_specs/no_thermalization/: fake_algiers.json  fake_almaden.json  fake_armonk.json  fake_athens.json  fake_auckland.json  fake_belem.json  fake_boeblingen.json  fake_bogota.json  fake_brisbane.json  fake_brooklyn.json  fake_burlington.json  fake_cairo.json  fake_cambridge.json  fake_casablanca.json  fake_cusco.json  fake_essex.json  fake_fez.json  fake_geneva.json  fake_guadalupe.json  fake_hanoi.json  fake_jakarta.json  fake_johannesburg.json  fake_kawasaki.json  fake_kolkata.json  fake_kyiv.json  fake_kyoto.json  fake_lagos.json  fake_lima.json  fake_london.json  fake_makarresh.json  fake_manhattan.json  fake_manila.json  fake_melbourne.json  fake_montreal.json  fake_mumbai.json  fake_nairobi.json  fake_osaka.json  fake_oslo.json  fake_ourense.json  fake_paris.json  (+15 more)
hardware_specs/with_thermalization/: fake_armonk.json  fake_athens.json  fake_belem.json  fake_bogota.json  fake_burlington.json  fake_casablanca.json  fake_essex.json  fake_jakarta.json  fake_johannesburg.json  fake_lagos.json  fake_lima.json  fake_london.json  fake_manila.json  fake_nairobi.json  fake_oslo.json  fake_ourense.json  fake_perth.json  fake_quito.json  fake_rome.json  fake_santiago.json  fake_toronto.json  fake_valencia.json  fake_vigo.json  fake_yorktown.json
python_code/: ibm_noise_models.py  requirements.txt
src/: cli.rs  lib.rs  main.rs  quantum.rs  utils.rs
