[package]
name = "rust-program-synthesis"
authors = ["Stefanie Muroya Lei"]
version = "0.1.0"
edition = "2024"
description = "Hardware-optimal quantum algorithm synthesis"

[dependencies]
clap ={ version = "4.5.32", features = ["derive"]} # library to create a command-line application
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
rug = "1.27.0" # arbitrary precision real and complex numbers
